--- a/10000hours.html
+++ b/10000hours.html
@@ -1,1 +1,37 @@
 <!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/10000hours.css">
+    <title>1만 시간의 법칙</title>
+</head>
+<body>
+    <div class="wrapping">
+        <header class="header">
+            <h1 class="logo"><a href="#none"><img src="./img/title.png" alt="1만 시간의 법칙"></a></h1>
+        </header>
+        <main class="main">
+            <section class="container">
+                <h2 class="tit-main">“연습은 어제의 당신보다 당신을 더 낫게 만든다.”</h2>
+                <p class="txt-explan">
+                    <strong>1만 시간의 법칙</strong>은<br>어떤 분야의 전문가가 되기 위해서는<br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+                </p>
+                <p class="txt-job">
+                    나는<input class="input-job" type="text" placeholder="예)프로그래밍" required>전문가가 될 것이다.
+                </p>
+                <p class="txt-job">
+                    그래서 앞으로 매일 하루에<input class="input-time" type="number" min="1" max="10000" placeholder="예)5시간" required>시간씩 훈련할 것이다.
+                </p>
+            </section>  
+            <button class="">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+        </main>
+        <footer class="footer">
+
+        </footer>
+    </div>
+
+</body>
+</html>
