--- a/10000hours.html
+++ b/10000hours.html
@@ -14,22 +14,34 @@
             <h1 class="logo"><a href="#none"><img src="./img/title.png" alt="1만 시간의 법칙"></a></h1>
         </header>
         <main class="main">
-            <section class="container">
-                <h2 class="tit-main">“연습은 어제의 당신보다 당신을 더 낫게 만든다.”</h2>
-                <p class="txt-explan">
-                    <strong>1만 시간의 법칙</strong>은<br>어떤 분야의 전문가가 되기 위해서는<br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+            <h2 class="tit-main txt-hide">연습은 어제의 당신보다 당신을 더 낫게 만든다.</h2>
+            <p class="txt-explan">
+                <strong>1만 시간의 법칙</strong>은<br>어떤 분야의 전문가가 되기 위해서는<br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+            </p>
+            <form class="form-plan" action="">
+                <p class="txt-plan">
+                    나는<input class="inp inp-job" type="text" placeholder="예)프로그래밍" required>전문가가 될 것이다.
                 </p>
-                <p class="txt-job">
-                    나는<input class="input-job" type="text" placeholder="예)프로그래밍" required>전문가가 될 것이다.
+                <p class="txt-plan">
+                    그래서 앞으로 매일 하루에<input class="inp inp-time" type="number" min="1" max="10000" placeholder="예)5시간" required>시간씩 훈련할 것이다.
                 </p>
-                <p class="txt-job">
-                    그래서 앞으로 매일 하루에<input class="input-time" type="number" min="1" max="10000" placeholder="예)5시간" required>시간씩 훈련할 것이다.
-                </p>
-            </section>  
-            <button class="">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+                <button class="btn btn-result">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+            </form>
+            <div class="rule_result">
+                <p class="txt-result">당신은<strong class="user-job">프로그래밍</strong><wbr>전문가가 되기 위해서</p>
+                <p class="txt-result">대략<strong class="user-day">9999</strong>일 이상 훈련하셔야 합니다! :)</p>
+                <div class="btn-wrap">
+                    <button type="button" class="btn btn-edu">훈련하러 가기 GO!GO!</button>
+                    <button type="button" class="btn btn-share">공유하기</button>
+                </div>
+            </div>
         </main>
         <footer class="footer">
-
+            <h2 class="footer-logo"><a href="#none"><img src="./img/logo.png" alt="위니브"></a></h2>
+            <p class="txt-footer">
+                ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>
+                수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+            </p>
         </footer>
     </div>
 
