html,css 모바일 완료

--- a/10000hours.html
+++ b/10000hours.html
@@ -20,12 +20,12 @@
             </p>
             <form class="form-plan" action="">
                 <p class="txt-plan">
-                    나는<input class="inp inp-job" type="text" placeholder="예)프로그래밍" required>전문가가 될 것이다.
+                    나는<input class="inp inp-job" type="text" placeholder="예) 프로그래밍" required>전문가가 될 것이다.
                 </p>
                 <p class="txt-plan">
-                    그래서 앞으로 매일 하루에<input class="inp inp-time" type="number" min="1" max="10000" placeholder="예)5시간" required>시간씩 훈련할 것이다.
+                    그래서 앞으로 매일 하루에<input class="inp inp-time" type="number" min="1" max="10000" placeholder="예) 5" required>시간씩 훈련할 것이다.
                 </p>
-                <button class="btn btn-result">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+                <button class="btn btn-result">나는 며칠 동안 훈련을 해야 <span>1만 시간이 될까?</span></button>
             </form>
             <div class="rule_result">
                 <p class="txt-result">당신은<strong class="user-job">프로그래밍</strong><wbr>전문가가 되기 위해서</p>
