--- a/10000hours.html
+++ b/10000hours.html
@@ -20,18 +20,19 @@
             </p>
             <form class="form-plan" action="">
                 <p class="txt-plan">
-                    나는<input class="inp inp-job" type="text" placeholder="예) 프로그래밍" required>전문가가 될 것이다.
+                    나는<input class="inp inp-job" type="text" id="inpJob" placeholder="예) 프로그래밍" required>전문가가 될 것이다.
                 </p>
                 <p class="txt-plan">
-                    그래서 앞으로 매일 하루에<input class="inp inp-time" type="number" min="1" max="10000" placeholder="예) 5" required>시간씩 훈련할 것이다.
+                    그래서 앞으로 매일 하루에<input class="inp inp-time" id="inpTime" type="number" min="1" max="10000" placeholder="예) 5" required>시간씩 훈련할 것이다.
                 </p>
-                <button class="btn btn-result">나는 며칠 동안 훈련을 해야 <span>1만 시간이 될까?</span></button>
+                <button id="btnResult" class="btn btn-result">나는 며칠 동안 훈련을 해야 <span>1만 시간이 될까?</span></button>
             </form>
-            <div class="rule_result">
-                <p class="txt-result">당신은<strong class="user-job">프로그래밍</strong><wbr>전문가가 되기 위해서</p>
-                <p class="txt-result">대략<strong class="user-day">9999</strong>일 이상 훈련하셔야 합니다! :)</p>
+            <div class="result-loading active close"></div>
+            <div class="rule_result close" id="ruleResult">
+                <p class="txt-result">당신은<strong class="user-job"></strong><wbr>전문가가 되기 위해서</p>
+                <p class="txt-result">대략<strong class="user-day"></strong>일 이상 훈련하셔야 합니다! :)</p>
                 <div class="btn-wrap">
-                    <button type="button" class="btn btn-edu">훈련하러 가기 GO!GO!</button>
+                    <button type="button" id="btnEdu" class="btn btn-edu">훈련하러 가기 GO!GO!</button>
                     <button type="button" class="btn btn-share">공유하기</button>
                 </div>
             </div>
@@ -44,6 +45,14 @@
             </p>
         </footer>
     </div>
-
+    <div class="modal-fighting close" id="fighting">
+        <article class="modal-box">
+            <h2>화이팅!!♥♥♥</h2>
+            <p>당신의 꿈을 응원합니다!</p>
+            <img src="./img/licat.png" alt="">
+            <a class="btn btn-go" href="#none">종료하고 진짜 <span>훈련하러 가기 GO!GO!</span></a>
+        </article>
+    </div>
+    <script src="./js/10000hours.js"></script>
 </body>
 </html>
